[project]
dynamic = ["version"]  # version is managed by setuptools_scm
name = "pockexport"
dependencies = [
    "pocket",  # pocket API bindings
]

#
# this needs to be set if you're planning to upload to pypi
# url = ""
# author = ""
# author_email = ""
# description = ""

# Rest like -- classifiers, license, etc, I don't think it matters for pypi
# it's just unnecessary duplication

[project.optional-dependencies]
testing = ["pytest"]
linting = [
    "pytest",
    "mypy",
    "lxml",  # for mypy html coverage
    "orjson",  # exporthelpers
    "colorlog",  # exporthelpers
]


[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme = "dirty-tag"


# nice things about pyproject.toml
# - zip_safe=False isn't neccessary anymore
# - correctly discovers namespace packages by defuilt?
# - correctly handles py.typed by default?
# - handles src layout automatically https://setuptools.pypa.io/en/latest/userguide/package_discovery.html#src-layout

# things I'm not sure about yet
# - avoiding dupliation/variable reuse?
# - file/git dependencies?
# - unclear how to specify namespace package order https://github.com/seanbreckenridge/reorder_editable/issues/2

# TODO
# - maybe it has a nicer pypi upload system? not sure
#   e.g. possibly use hatch/flit/pdb/poetry -- but not sure what's the benefit tbh
